# application_bas

./: README.md  pyproject.toml  setup.py
application_bas/: hooks.py  modules.txt
application_bas/www/app_detail_page/: code.html
application_bas/www/app_directory/: code.html
application_bas/www/checkout_flow/: code.html
application_bas/www/customer_dashboard/: code.html
application_bas/www/frappe_forge_design_system/: DESIGN.md
application_bas/www/listing_manager/: code.html
application_bas/www/login_sign_up/: code.html
application_bas/www/marketplace_home/: code.html
application_bas/www/seller_dashboard/: code.html
