[project]
name = "application_bas"
authors = [
    { name = "Balaji K", email = "balajik@example.com" }
]
description = "Application Bas"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.set-version]
package = "application_bas"
